tests/error/private_func_call_out.gw
#! [contains] invalid variable access
class C {
  fun private void test(){}
}

var C c;
c.test();
